--- a/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
@@ -16,6 +16,7 @@
 
     {% block javascripts %}
         <script type="text/javascript" src="{{ asset('js/processed/mainNew.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/processed/tv.min.js') }}"></script>
     {% endblock %}
 
     {% block jsTemplating %}
