--- a/web/sass/tv.scss
+++ b/web/sass/tv.scss
@@ -43,6 +43,17 @@
             width: 100%;
             padding-bottom: 56.2%;
             background-color: $grayGC;
+
+            span {
+                display: block;
+                position: absolute;
+                color: $whiteGC;
+                top: 50%;
+                width: 100%;
+                text-align: center;
+                line-height: 20px;
+                margin-top: -10px;
+            }
         }
 
         div.hover {
@@ -118,6 +129,10 @@
                 display: block;
             }
         }
+    }
+
+    &#more {
+        outline: none;
     }
 
 }
