--- a/src/gospelcenter/MediaBundle/Resources/views/Media/centers.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/centers.html.twig
@@ -12,7 +12,7 @@
                         {% if center.image %}
                             {% set tvImg = center.image.webPath %}
                             <div class="image"
-                                 style="background-image: url('{{ asset(tvImg) }}')"
+                                 style="background-image: url('{{ asset(tvImg)| imagine_filter('tv_wall') }}')"
                                  data-bg="{{ asset(tvImg)| imagine_filter('tv_wall') }}"
                                  data-bg_2x="{{ asset(tvImg)| imagine_filter('tv_wall_2x') }}"
                                  data-bg_tablet="{{ asset(tvImg)| imagine_filter('tv_wall_tablet') }}"
