Edit Celebration page for GCAnnecy

--- a/web/sass/advanced/_celebrations.scss
+++ b/web/sass/advanced/_celebrations.scss
@@ -17,6 +17,15 @@
             text-transform: uppercase;
             font-family: $font-thin;
             font-size: 2.2em;
+            max-width: 60%;
+            line-height: 1.2em;
+            top: 50%;
+            position: relative;
+            margin: 0 auto;
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+            white-space: normal;
         }
     }
 
@@ -284,9 +293,15 @@
 
             h2 {
                 font-size: 1.6em;
-                line-height: 125px;
                 max-width: 90%;
                 margin: 0 auto;
+                line-height: 1.2em;
+                top: 50%;
+                position: relative;
+                -webkit-transform: translateY(-50%);
+                -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
+                white-space: normal;
             }
         }
 
