--- a/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
@@ -23,6 +23,39 @@
 
     {% endblock %}
 
+    <script id="addToWall" type="text/x-handlebars-template">
+        {% raw %}
+
+        <a href="{{ link }}">
+            <div class="container">
+                {{#if has_image }}
+                <div class="image"
+                     style="background-image: url('{{ image }}')"
+                     data-bg="{{ image }}"
+                     data-bg_2x="{{ image_2x }}"
+                     data-bg_tablet="{{ image_tablet }}"
+                     data-bg_tablet_2x="{{ image_tablet_2x }}"
+                     data-bg_mobile="{{ image_mobile }}"
+                     data-bg_mobile_2x="{{ image_mobile_2x }}"
+                        ></div>
+                <div class="gradient"></div>
+                {{else}}
+                <div class="bg"></div>
+                {{/if}}
+                <div class="hover">
+                    <div class="picto_play"></div>
+                    <span>{{ action }}</span>
+                </div>
+                <div class="details">
+                    <h1>{{ title }}</h1>
+                    <span>{{ subtitle }}</span>
+                </div>
+            </div>
+        </a>
+
+        {% endraw %}
+    </script>
+
 </head>
 <body>
 <section id="ruban_nav">
