--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/fr/about.html.twig
@@ -111,7 +111,7 @@
     {% spaceless %}
 
         <article class="people">
-            <img src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
+            <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
             <section>
                 <h1>Sandra et Julien Dubi</h1>
 
@@ -123,7 +123,7 @@
         </article>
 
         <article class="people">
-            <img src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
+            <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
             <section>
                 <h1>Julie et Olivier Mussard </h1>
 
@@ -133,7 +133,7 @@
         </article>
 
         <article class="people">
-            <img src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
+            <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
             <section>
                 <h1>Elisabeth et Stéphane Potin</h1>
 
