--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -123,7 +123,7 @@
         {% spaceless %}
 
             <article class="people">
-                <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
+                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
                      alt="Marc Gallay"/>
                 <section>
                     <h1>Marc & Christine Gallay</h1>
@@ -134,7 +134,7 @@
             </article>
 
             <article class="people">
-                <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
+                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
                      alt="Jean-Philippe Bärtschi"/>
                 <section>
                     <h1>Jean-Philippe Bärtschi</h1>
@@ -144,7 +144,7 @@
             </article>
 
             <article class="people">
-                <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
+                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
                      alt="Patrick Bigler"/>
                 <section>
                     <h1>Patrick Bigler</h1>
@@ -154,7 +154,7 @@
             </article>
 
             <article class="people">
-                <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
+                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
                      alt="Alix Bingle"/>
                 <section>
                     <h1>Alix Bingle</h1>
@@ -164,7 +164,7 @@
             </article>
 
             <article class="people">
-                <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
+                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
                      alt="Marc Rapelli"/>
                 <section>
                     <h1>Marc Rapelli</h1>
@@ -174,7 +174,7 @@
             </article>
 
             <article class="people">
-                <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
+                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
                      alt="Timothée Rochat"/>
                 <section>
                     <h1>Timothée Rochat</h1>
