--- a/web/sass/_header.scss
+++ b/web/sass/_header.scss
@@ -301,6 +301,12 @@
                 border-bottom: 1px solid rgba($grayGC, 0.5);
                 white-space: nowrap;
                 overflow-x: scroll;
+                -ms-overflow-style: none;
+                overflow: -moz-scrollbars-none;
+
+                &::-webkit-scrollbar {
+                    display: none;
+                }
 
                 li {
                     display: inline-block;
