--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -56,65 +56,53 @@
              data-img_mobile_2x="{{ asset(aboutImg)| imagine_filter('blog_big_mobile_2x') }}">
 
 
-        <h2 class="underline"><span>Qui</span></h2>
+        <h2 class="underline"><span>Who</span></h2>
 
-        <p>Le Gospel Center Lausanne est membre du Réseau évangélique suisse (<a target="_blank"
-                                                                                 href="http://www.evangelique.ch">RES</a>),
-            de la Fédération romande des Églises évangéliques
-            évangéliques (<a target="_blank" href="http://www.lafree.ch">FREE</a>) et dépend du mouvement <a
+        <p>The Gospel Center Lausanne is a member of the <a target="_blank"
+                                                            href="http://www.evangelique.ch">Réseau évangélique
+                suisse</a> (Swiss evangelical network), of the <a target="_blank" href="http://www.lafree.ch">Fédération
+                romande des Églises évangéliques</a> (the swiss federation of French-speaking evangelical churches) and
+            is linked to the <a
                     target="_blank"
-                    href="http://www.gospel-wave.org">Gospel
-                Wave.</a></p>
+                    href="http://www.gospel-wave.org">Gospel Wave movement.</a></p>
 
-        <h2 class="underline"><span>Comment</span></h2>
+        <h2 class="underline"><span>How</span></h2>
 
-        <p>Le Gospel Center a le désir de vivre l’Evangile de la façon la plus complète possible, y compris dans la
-            dimension de la guérison divine et du miraculeux.</p>
+        <p>The Gospel Center has the desire to live the Gospel in the most relevant way, also in the area of healing and
+            miracles.</p>
 
-        <p>Le Gospel Center a comme vision de communiquer avec des moyens modernes qui rejoignent les personnes dans
-            leur
-            réalité. Les médias, l’audiovisuel, ainsi que les activités mises en place poursuivent ce but.</p>
+        <p>The Gospel Center envisions a communication through modern technology in order to impact people in their
+            everyday lives. Our audiovisual media as well as our set of activities pursue this aim.</p>
 
-        <p>Nous sommes convaincus de l’importance de la diversité des façons de vivre la foi et de la richesse
-            qu’apportent
-            les simples moments de vie partagés. Les célébrations du dimanche soir ne sont qu’une facette de la vie
-            chrétienne.</p>
+        <p>We are convinced that there are various ways of living out the Christian life, while simple moments of life
+            shared together are just as enriching. Our Sunday evening celebrations are just one way of living out this
+            Christian lifestyle.</p>
 
-        <h2 class="underline"><span>Pourquoi</span></h2>
+        <h2 class="underline"><span>Why</span></h2>
 
-        <p>Le Gospel Center existe dans le but de stimuler, développer et faire découvrir un mode de vie positif,
-            pratique,
-            puissant, fondé sur Jésus au travers de la Bible. Nous croyons que la vie d’un chrétien ne s’arrête pas aux
-            dimanches ou aux programmes offerts par l’église mais se vit aussi le reste de la semaine dans des activités
-            diverses, dans nos lieux de vie respectifs et nos lieux de travail.</p>
+        <p>The Gospel Center exists to stimulate, develop and reveal a positive, practical and powerful way of living
+            based on Jesus through the Bible. We believe that the Christian life is more than just Sunday celebrations
+            and church programs, but it is also lived out during the rest of the week, in our various activities as well
+            as our workplaces.</p>
 
-        <p>Le Gospel Center souhaite offrir un espace où la dimension de la communion fraternelle est un élément
-            central. Un
-            espace où la foi de chacun peut grandir de manière saine et équilibrée, aussi bien dans la dimension du
-            faire
-            que de l’être. Nous souhaitons voir Dieu agir au travers de miracles, de guérisons et de vies
-            transformées.</p>
+        <p>The Gospel Center wishes to offer an environment where fellowship is a key element. An environment where the
+            faith of everyone can grow in a healthy and balanced way as much in the doing than in the being. We desire
+            to see God move through miracles, healings and transformed lives.</p>
 
         <h2 class="underline"><span>Structure</span></h2>
 
-        <p>Le Gospel Center fonctionne pour et par ses « bases », qui sont le regroupement de 4 à 7 personnes par région
-            et
-            centres d’intérêt. Le but est de proposer un lieu de taille accessible sur le plan relationnel où il est
-            possible d’avancer régulièrement et de manière personnelle dans sa maturité spirituelle. Les ”bases” mettent
-            l’accent aussi bien sur les moments de vie partagés (sport, sorties, activités culturelles, etc.) que sur
-            les
-            temps d’échange autour de la Bible. Le Gospel Center veut offrir la possibilité à chaque personne de
-            s’investir
-            selon ses capacités, son temps et sa motivation dans la vie de sa ”base” et par prolongement dans ses
-            diverses
-            activités, dont la célébration du dimanche soir.</p>
+        <p>The Gospel Center works for and through its “bases”, groups of 4 to 7 people based on geographical area and
+            interests. The aim is to offer places of reasonable size to develop relationships and spiritual growth. The
+            ”bases” focus as much on shared activities (sports, excursions, cultural activities, etc.) as on time spent
+            in and around the Bible. The Gospel Center wants to offer the possibility to each and every one to get
+            involved according to his/her abilities, time and motivation in the life of the ”bases” and from there in
+            the various church activities such as the Sunday evening celebrations.</p>
 
         <h2 class="underline"><span>Finances</span></h2>
 
-        <p>Le Gospel Center Lausanne ne bénéficie d’aucun soutien de l’État. C’est une association à but non lucratif.
-            L’ensemble des frais de fonctionnement est assumé par l’engagement libre de chacun. Nos comptes sont
-            approuvés
-            par l’Assemblée générale après vérification par une fiduciaire.</p>
+        <p>The Gospel Center Lausanne receives no government support and is a non-profit organization. All the running
+            costs are being covered by the free commitment of everyone. Our accounts are approved by the General
+            Assembly after having been checked by a trustee.</p>
 
     </article>
 
@@ -123,7 +111,8 @@
         {% spaceless %}
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
+                <img class="radius"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
                      alt="Marc Gallay"/>
                 <section>
                     <h1>Marc & Christine Gallay</h1>
@@ -134,7 +123,8 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
+                <img class="radius"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
                      alt="Jean-Philippe Bärtschi"/>
                 <section>
                     <h1>Jean-Philippe Bärtschi</h1>
@@ -144,7 +134,8 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
+                <img class="radius"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
                      alt="Patrick Bigler"/>
                 <section>
                     <h1>Patrick Bigler</h1>
@@ -154,7 +145,8 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
+                <img class="radius"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
                      alt="Alix Bingle"/>
                 <section>
                     <h1>Alix Bingle</h1>
@@ -164,7 +156,8 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
+                <img class="radius"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
                      alt="Marc Rapelli"/>
                 <section>
                     <h1>Marc Rapelli</h1>
@@ -174,7 +167,8 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
+                <img class="radius"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
                      alt="Timothée Rochat"/>
                 <section>
                     <h1>Timothée Rochat</h1>
@@ -289,14 +283,14 @@
              data-img_mobile="{{ asset(believeImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(believeImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <p>We believe that the Bible is inspired by God. The Word of God is the unique basis of our faith and doctrine
-            and carries out our actions.</p>
+        <p>We believe that the Bible is inspired by God. The Word of God is the single basis of our faith and doctrine
+            and leads our actions.</p>
 
         <p>We believe in the unique God who exists in three distinct identities: the Father, the Son Jesus-Christ and
-            his Holy-Spirit.</p>
+            the Holy-Spirit.</p>
 
-        <p>We believe that everyone has sinned and falls short of the glory of God. We believe that sinners are saved by
-            grace, through repentance and faith in the perfect and sufficient sacrifice of Jesus at the cross.</p>
+        <p>We believe that everyone has sinned and fallen short of the glory of God. We believe that sinners are saved
+            by grace, through repentance and faith in the perfect and sufficient sacrifice of Jesus at the cross.</p>
 
         <p>We believe in a Church, not as a human institution but as the gathering of believers around their chief:
             Jesus-Christ.</p>
@@ -354,7 +348,9 @@
         <p>Cet album a été enregistré lors de la conférence de l’AIMG à Lausanne en 2011. C'est le fruit de moments
             d'adoration authentiques vécus lors de cet événement. Les titres sont chantés en français et en anglais.</p>
 
-        <a target="_blank" href="http://www.gospel-diffusion.com/index.php/musique/gospel_center_band_i_am_free_je_suis_libre_2116.html">Acheter cet album</a>
+        <a target="_blank"
+           href="http://www.gospel-diffusion.com/index.php/musique/gospel_center_band_i_am_free_je_suis_libre_2116.html">Acheter
+            cet album</a>
 
 
     </article>
