--- a/web/sass/_functionsNew.scss
+++ b/web/sass/_functionsNew.scss
@@ -1,11 +1,11 @@
 @mixin gradient($color: #F5F5F5, $start: #EEE, $stop: #FFF) {
-	background: $color;
-	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, $start), color-stop(1, $stop));
-	background: -ms-linear-gradient(bottom, $start, $stop);
-	background: -moz-linear-gradient(center bottom, $start 0%, $stop 100%);
-	background: -o-linear-gradient($stop, $start);
-	//filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",$stop,$start));
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled='false', startColorstr=$start, endColorstr=$stop);
+    background: $color;
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(0, $start), color-stop(1, $stop));
+    background: -ms-linear-gradient(bottom, $start, $stop);
+    background: -moz-linear-gradient(center bottom, $start 0%, $stop 100%);
+    background: -o-linear-gradient($stop, $start);
+    //filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",$stop,$start));
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled='false', startColorstr=$start, endColorstr=$stop);
 
 }
 
@@ -21,31 +21,30 @@
 }
 
 @mixin desaturate() {
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-    filter: gray;
-    filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale");
+    filter: url('../js/grayscale/filters.svg#grayscale'); /* Firefox 3.5+ */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(1); /* Webkit Nightlies & Google Chrome Canary */
 }
 
 @mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-     -moz-border-radius: $radius;
-      -ms-border-radius: $radius;
-       -o-border-radius: $radius;
-          border-radius: $radius;
+    -webkit-border-radius: $radius;
+    -moz-border-radius: $radius;
+    -ms-border-radius: $radius;
+    -o-border-radius: $radius;
+    border-radius: $radius;
 }
 
 @mixin maintain-ratio($ratio: 1 1) {
-  @if length($ratio) < 2 or length($ratio) > 2 {
-    @warn "$ratio must be a list with two values.";
-  }
- 
-  $width: 100%;
-  $height: percentage(nth($ratio, 2) / nth($ratio, 1));
-  
-  width: $width;
-  height: 0;
-  padding-bottom: $height;
+    @if length($ratio) < 2 or length($ratio) > 2 {
+        @warn "$ratio must be a list with two values.";
+    }
+
+    $width: 100%;
+    $height: percentage(nth($ratio, 2) / nth($ratio, 1));
+
+    width: $width;
+    height: 0;
+    padding-bottom: $height;
 }
 
 @mixin vertical-align {
@@ -56,7 +55,6 @@
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
-
 
 @mixin preserve-3d {
     -webkit-transform-style: preserve-3d;
@@ -156,6 +154,5 @@
 
         @include bannerResp_style($base * 1.75);
     }
-
 
 }
