--- a/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
@@ -33,7 +33,7 @@
 
                         <a class="speaker" data-link="{{ celebration.id }}" data-link-elem="celebrationInfo">
 
-                            <div class="photo radius"
+                            <div class="photo radius round"
                                     {% if celebration.speakers[0].person.image %}
 
                                     {% set image = celebration.speakers[0].person.image %}
