--- a/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
@@ -45,7 +45,7 @@
                                 data-bg_mobile="{{ asset(image.webPath)| imagine_filter('next_celebration_mobile') }}"
                                 data-bg_mobile_2x="{{ asset(image.webPath)| imagine_filter('next_celebration_mobile_2x') }}"
                                     {% endif %}>
-                                <div class="hover radius"></div>
+                                <div class="hover radius round"></div>
                             </div>
 
                             <h1>{{ celebration|speakers(app.request.locale) }}</h1>
