--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -111,7 +111,7 @@
         {% spaceless %}
 
             <article class="people">
-                <img class="radius"
+                <img class="radius round"
                      src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
                      alt="Marc Gallay"/>
                 <section>
@@ -123,7 +123,7 @@
             </article>
 
             <article class="people">
-                <img class="radius"
+                <img class="radius round"
                      src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
                      alt="Jean-Philippe Bärtschi"/>
                 <section>
@@ -134,7 +134,7 @@
             </article>
 
             <article class="people">
-                <img class="radius"
+                <img class="radius round"
                      src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
                      alt="Patrick Bigler"/>
                 <section>
@@ -145,7 +145,7 @@
             </article>
 
             <article class="people">
-                <img class="radius"
+                <img class="radius round"
                      src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
                      alt="Alix Bingle"/>
                 <section>
@@ -156,7 +156,7 @@
             </article>
 
             <article class="people">
-                <img class="radius"
+                <img class="radius round"
                      src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
                      alt="Marc Rapelli"/>
                 <section>
@@ -167,7 +167,7 @@
             </article>
 
             <article class="people">
-                <img class="radius"
+                <img class="radius round"
                      src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
                      alt="Timothée Rochat"/>
                 <section>
