--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -124,7 +124,7 @@
         {% spaceless %}
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
                      alt="Marc Gallay"/>
                 <section>
                     <h1>Marc et Christine Gallay</h1>
@@ -135,7 +135,7 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
                      alt="Jean-Philippe Bärtschi"/>
                 <section>
                     <h1>Jean-Philippe Bärtschi</h1>
@@ -145,7 +145,7 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
                      alt="Patrick Bigler"/>
                 <section>
                     <h1>Patrick Bigler</h1>
@@ -155,7 +155,7 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/AlixBingle.jpg') }}"
                      alt="Alix Bingle"/>
                 <section>
                     <h1>Alix Bingle</h1>
@@ -165,7 +165,7 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcRapelli.jpg') }}"
                      alt="Marc Rapelli"/>
                 <section>
                     <h1>Marc Rapelli</h1>
@@ -175,7 +175,7 @@
             </article>
 
             <article class="people">
-                <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/TimotheeRochat.jpg') }}"
                      alt="Timothée Rochat"/>
                 <section>
                     <h1>Timothée Rochat</h1>
