--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/annecy/en/about.html.twig
@@ -107,7 +107,7 @@
     {% spaceless %}
 
         <article class="people">
-            <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/MarcGallay.png') }}" alt="Marc Gallay"/>
             <section>
                 <h1>Marc Gallay</h1>
 
@@ -119,7 +119,7 @@
         </article>
 
         <article class="people">
-            <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/SimonMoser.png') }}" alt="Simon Moser"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/SimonMoser.png') }}" alt="Simon Moser"/>
             <section>
                 <h1>Simon Moser</h1>
 
@@ -128,7 +128,7 @@
         </article>
 
         <article class="people">
-            <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/Pierre-AndreDinatale.png') }}"
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/Pierre-AndreDinatale.png') }}"
                  alt="Pierre-André Dinatale"/>
             <section>
                 <h1>Pierre-André Dinatale</h1>
@@ -138,7 +138,7 @@
         </article>
 
         <article class="people">
-            <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/AlixBingle.png') }}" alt="Alix Bingle"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/AlixBingle.png') }}" alt="Alix Bingle"/>
             <section>
                 <h1>Alix Bingle</h1>
 
@@ -147,7 +147,7 @@
         </article>
 
         <article class="people">
-            <img class="radius" src="{{ asset('bundles/gospelcenterpage/images/PatrickBigler.png') }}" alt="Patrick Bigler"/>
+            <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/PatrickBigler.png') }}" alt="Patrick Bigler"/>
             <section>
                 <h1>Patrick Bigler</h1>
 
