--- a/src/gospelcenter/CenterBundle/Resources/views/AdminCenter/edit.html.twig
+++ b/src/gospelcenter/CenterBundle/Resources/views/AdminCenter/edit.html.twig
@@ -25,7 +25,7 @@
 
 {% block adminBody %}
 
-    <form class="center" action="{{ path('gospelcenterAdminGlobal_centers_add') }}" method="post" {{ form_enctype(form) }}>
+    <form novalidate class="center" action="{{ path('gospelcenterAdminGlobal_centers_add') }}" method="post" {{ form_enctype(form) }}>
 
         {{ form_widget(form.name) }}
         {{ form_errors(form.name) }}
