--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPersonGlobal/add.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPersonGlobal/add.html.twig
@@ -19,7 +19,7 @@
 
 {% block adminBody %}
 
-    <form class="person" action="{{ path('gospelcenterAdminGlobal_persons_add') }}"
+    <form novalidate class="person" action="{{ path('gospelcenterAdminGlobal_persons_add') }}"
           method="post" {{ form_enctype(form) }}>
 
 
