--- a/src/gospelcenter/AdminBundle/Resources/views/Celebration/add.html.twig
+++ b/src/gospelcenter/AdminBundle/Resources/views/Celebration/add.html.twig
@@ -23,7 +23,7 @@
 
 {% block adminBody %}
     {% spaceless %}
-        <form class="celebration" action="{{ path('gospelcenterAdmin_celebrations_add', {'center': center.ref}) }}"
+        <form novalidate class="celebration" action="{{ path('gospelcenterAdmin_celebrations_add', {'center': center.ref}) }}"
               method="post" {{ form_enctype(form) }}>
 
             <section class="tab">
