--- a/src/gospelcenter/AdminBundle/Resources/views/Image/add.html.twig
+++ b/src/gospelcenter/AdminBundle/Resources/views/Image/add.html.twig
@@ -19,7 +19,7 @@
 
 {% block adminBody %}
 
-    <form class="image" action="{{ path('gospelcenterAdmin_images_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
+    <form novalidate class="image" action="{{ path('gospelcenterAdmin_images_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
 
         {{ form_widget(form.file) }}
         {{ form_errors(form.file) }}
