--- a/src/gospelcenter/AdminBundle/Resources/views/Image/edit.html.twig
+++ b/src/gospelcenter/AdminBundle/Resources/views/Image/edit.html.twig
@@ -25,7 +25,7 @@
 
 {% block adminBody %}
 
-    <form class="image" action="{{ path('gospelcenterAdmin_images_edit', {'center': center.ref, 'image': image.id}) }}" method="post" {{ form_enctype(form) }}>
+    <form novalidate class="image" action="{{ path('gospelcenterAdmin_images_edit', {'center': center.ref, 'image': image.id}) }}" method="post" {{ form_enctype(form) }}>
 
         {{ form_widget(form.file) }}
         {{ form_errors(form.file) }}
