--- a/src/gospelcenter/ArticleBundle/Resources/views/AdminAd/add.html.twig
+++ b/src/gospelcenter/ArticleBundle/Resources/views/AdminAd/add.html.twig
@@ -19,7 +19,7 @@
 
 {% block adminBody %}
 
-    <form class="ad" action="{{ path('gospelcenterAdmin_ads_add', {'center': center.ref}) }}"
+    <form novalidate class="ad" action="{{ path('gospelcenterAdmin_ads_add', {'center': center.ref}) }}"
           method="post" {{ form_enctype(form) }}>
 
         {{ form_widget(form.status) }}
