--- a/src/gospelcenter/EventBundle/Resources/views/Admin/add.html.twig
+++ b/src/gospelcenter/EventBundle/Resources/views/Admin/add.html.twig
@@ -24,7 +24,7 @@
 
     {% spaceless %}
 
-        <form class="event" action="{{ path('gospelcenterAdmin_events_add', {'center': center.ref}) }}"
+        <form novalidate class="event" action="{{ path('gospelcenterAdmin_events_add', {'center': center.ref}) }}"
               method="post" {{ form_enctype(form) }}>
 
             <section class="tab">
