--- a/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/edit.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPageGlobal/edit.html.twig
@@ -20,7 +20,7 @@
 
 {% block adminBody %}
 
-    <form class="page" action="{{ path('gospelcenterAdminGlobal_pages_edit', {'page': objPage.id}) }}" method="post" {{ form_enctype(form) }}>
+    <form novalidate class="page" action="{{ path('gospelcenterAdminGlobal_pages_edit', {'page': objPage.id}) }}" method="post" {{ form_enctype(form) }}>
 
         {{ form_widget(form.ref) }}
         {{ form_errors(form.ref) }}
