--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlide/add.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlide/add.html.twig
@@ -19,7 +19,7 @@
 
 {% block adminBody %}
     
-    <form class="slide" action="{{ path('gospelcenterAdmin_slides_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
+    <form novalidate class="slide" action="{{ path('gospelcenterAdmin_slides_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
     	
     	{{ form_widget(form.image.file) }}
     	{{ form_errors(form.image.file) }}
