--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlideGlobal/add.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlideGlobal/add.html.twig
@@ -19,7 +19,7 @@
 
 {% block adminBody %}
 
-    <form class="slide" action="{{ path('gospelcenterAdminGlobal_slides_add') }}" method="post" {{ form_enctype(form) }}>
+    <form novalidate class="slide" action="{{ path('gospelcenterAdminGlobal_slides_add') }}" method="post" {{ form_enctype(form) }}>
 
         {{ form_widget(form.image.file) }}
         {{ form_errors(form.image.file) }}
