--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/add.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/add.html.twig
@@ -21,7 +21,7 @@
 {% block adminBody %}
     {% spaceless %}
 
-        <form class="person" action="{{ path('gospelcenterAdmin_persons_add', {'center': center.ref}) }}"
+        <form novalidate class="person" action="{{ path('gospelcenterAdmin_persons_add', {'center': center.ref}) }}"
               method="post" {{ form_enctype(form) }}>
 
 
