contact email bug fixed

--- a/src/gospelcenter/PageBundle/Resources/views/Page/contact.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/contact.html.twig
@@ -27,7 +27,7 @@
                 <p>+33 (0) 4 50 44 33 14</p>
             {% endif %}
 
-            <a href="mailto:info@gc-{{ center.ref }}.org">info@gc-{{ center.ref }}.org</a>
+            <p><a href="mailto:info@gc-{{ center.ref }}.org">info@gc-{{ center.ref }}.org</a></p>
 
             <p><a href="{{ path('gospelcenterPage_default', {'center': center.ref, 'page': 'give'}) }}"
                   class="buttonLink">{{ 'gc.nav.give'|trans }}</a></p>
